# todo-list-xtreme

./: .gitignore  AUTHENTICATION_MIGRATION_SUMMARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FRONTEND_TRACING_COMPLETE.md  GITHUB_RELEASE.md  GITHUB_SECRETS_SETUP.md  JWT_ENVIRONMENT_IMPLEMENTATION_COMPLETE.md  LICENSE  OBSERVABILITY_SETUP_COMPLETE.md  PYTHON_STRUCTURE_IMPROVEMENT_PLAN.md  PYTHON_STRUCTURE_STATUS.md  README.md  SECURITY.md  SETUP_SUMMARY.md  TEMPO_EMPTY_RING_FIX.md  generate_secrets.sh  package.json  run-column-tests.sh  run-tests-local.sh  test.db  test_blocked_column.py
.github/: SECURITY.md
backend/: Dockerfile  TESTING.md  add_column_settings.py  add_status_column.py  conftest.py  create-concurrent-load.sh  create_test_user.py  debug_init.py  demo_db_restore.sh  docker-compose-clean.yml  docker-compose.yml  download-dashboards.sh  install_log.txt  loki-config.yml  mimir-config.yml  otel-collector-config.yml  prometheus.yml  promtail-config.yml  pyproject.toml  requirements.txt  tempo-fixed.yml  tempo-old.yml  tempo-simple.yml  tempo.yml  test.db  test_api.py  test_column_settings.py  test_comprehensive_column_persistence.py  test_empty_column_persistence.py  test_import.py  test_settings.py
backend/app/: auth.py  column_settings.py  config.py  database.py  main.py  metrics.py  models.py  schemas.py  todos.py
backend/grafana/provisioning/alerting/: tempo-alerts.yml
backend/grafana/provisioning/dashboards/: api-metrics-dashboard.json  application-overview.json  comprehensive-loki-dashboard.json  comprehensive-tempo-dashboard.json  dashboard.yml  dashboards.yml  database-metrics-dashboard.json  distributed-tracing-explorer.json  fastapi-application-metrics.json  fastapi-metrics.json  k6-load-testing-dashboard.json  logs-dashboard.json  otel-collector.json  prometheus-internal-metrics-dashboard.json  prometheus-monitoring-combined.json  prometheus-monitoring-dashboard.json  prometheus-overview.json  tempo-dashboard.json  tempo-tracing-dashboard.json  todo-list-xtreme.json  tracing-explorer-dashboard.json
backend/grafana/provisioning/datasources/: all-datasources.yml  datasources.yml  tempo.yml
backend/grafana/provisioning/datasources/backup/: loki.yml
backend/k6-results/: k6-results.json
backend/src/: __init__.py
backend/src/todo_api/: __init__.py  main.py
backend/src/todo_api/api/v1/: router.py
backend/src/todo_api/api/v1/endpoints/: auth.py  column_settings.py  health.py  todos.py
backend/src/todo_api/config/: __init__.py  database.py  logging.py  settings.py
backend/src/todo_api/core/: auth.py
backend/src/todo_api/models/: __init__.py  base.py  todo.py  user.py
backend/src/todo_api/monitoring/: metrics.py
backend/src/todo_api/schemas/: __init__.py  column_settings.py  photo.py  todo.py  user.py
backend/src/todo_api/utils/: add_column_settings.py  add_status_column.py  create_test_user.py  init_db.py  simple_test_column_settings.py  wipe_db.py
backend/tests/: TESTING.md  conftest.py  test.db
backend/tests/integration/: conftest.py  test_api.py  test_column_settings.py  test_columns.py  test_columns_consolidated.py  test_comprehensive_column_persistence.py  test_empty_column_persistence.py
backend/tests/integration/archived/: test_blocked_column.py  test_comprehensive_column_persistence.py
backend/tests/unit/: test_todo_schemas.py
backend/utils/: update_todos_status.py
docs/: ADD_DEFAULT_COLUMNS_BUTTON_FIX.md  CHANGELOG.md  CODE_STRUCTURE.md  COLUMN_DEFAULT_RESTORATION_FIX.md  COLUMN_SETTINGS_FIX_COMPLETE.md  COMPLETE_OBSERVABILITY_FINAL_REPORT.md  DASHBOARD_FIX_COMPLETE.md  DATABASE_METRICS_IMPLEMENTATION_COMPLETE.md  DATASOURCE_NAME_CAPITALIZATION_COMPLETE.md  DATASOURCE_STANDARDIZATION_COMPLETE.md  ENHANCED_LOGS_DASHBOARD_COMPLETE.md  GITHUB_CI_CD.md  GITHUB_RELEASE.md  GITHUB_SECRETS_SETUP.md  GITHUB_WORKFLOW_YAML_FIX.md  IMPORT_STRATEGY_IMPLEMENTATION_COMPLETE.md  K6_BASE_URL_FIX_COMPLETE.md  K6_CI_INTEGRATION.md  K6_CI_INTEGRATION_COMPLETE.md  K6_DOCKER_INTEGRATION_COMPLETE.md  K6_LOAD_TESTING.md  K6_LOAD_TESTING_DOCUMENTATION.md  K6_LOAD_TESTING_SUMMARY.md  K6_MODULARIZATION_COMPLETE.md  K6_PATH_FIX_COMPLETE.md  K6_STATUS_VALIDATION_FIX_COMPLETE.md  OBSERVABILITY.md  OBSERVABILITY_FINAL_STATUS_REPORT.md  OBSERVABILITY_SETUP_COMPLETE.md  OLD_IMPORTS_CLEANUP_COMPLETE.md  OPENTELEMETRY_MODULE_FIX_COMPLETE.md  PYDANTIC_V2_MIGRATION_COMPLETE.md  SCRIPT_CONSOLIDATION_COMPLETE.md  (+4 more)
(+157 files in other folders)
